<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">
    <fragment
        tools:layout="@layout/fragment_home"
        android:id="@+id/homeFragment"
        android:name="com.project.soldiapp.fragments.HomeFragment"
        android:label="@string/app_name">
        <action
            android:id="@+id/action_homeFragment_to_i_ExpenseTypeFragment"
            app:destination="@id/i_ExpenseTypeFragment"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"/>

    </fragment>
    <fragment
        tools:layout="@layout/fragment_i_expense_type"
        android:id="@+id/i_ExpenseTypeFragment"
        android:name="com.project.soldiapp.fragments.register_expense.I_ExpenseTypeFragment"
        android:label="@string/addingExpense">
        <action
            android:id="@+id/action_i_ExpenseTypeFragment_to_ii_PaymentMethodFragment"
            app:destination="@id/ii_PaymentMethodFragment"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"/>
    </fragment>
    <fragment
        tools:layout="@layout/fragment_ii_payment_method"
        android:id="@+id/ii_PaymentMethodFragment"
        android:name="com.project.soldiapp.fragments.register_expense.II_PaymentMethodFragment"
        android:label="@string/addingExpense">
        <action
            android:id="@+id/action_ii_PaymentMethodFragment_to_iii_ConfirmExpenseFragment"
            app:destination="@id/iii_ConfirmExpenseFragment"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"/>
    </fragment>
    <fragment
        tools:layout="@layout/fragment_iii_confirm_expense"
        android:id="@+id/iii_ConfirmExpenseFragment"
        android:name="com.project.soldiapp.fragments.register_expense.III_ConfirmExpenseFragment"
        android:label="@string/confirmExpense">
        <action
            android:id="@+id/action_iii_ConfirmExpenseFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/homeFragment"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"/>
    </fragment>
</navigation>